add header and search bar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 
 $bluegrey : rgb(79, 127, 146);
 
-.Modal .Button {
+.button {
 background-color: $bluegrey;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap');
