change the pagination color

--- a/src/components/_PageHeader.scss
+++ b/src/components/_PageHeader.scss
@@ -6,11 +6,20 @@
     justify-content: flex-start;
 }
 
-@media container {
-    width: 100%;
-}
+
 
 .subTitle {
     font-size: 18px;
     color: rgb(150, 150, 150);
 }
+
+
+/* .btn-dark {
+    background-color: #86d67c !important;
+    border: #86d76c 1px solid !important;
+}
+
+.btn.disabled {
+    cursor: not-allowed !important;
+    opacity: 20% !important;
+} */
